# cashflow

./: .gitignore  .pre-commit-config.yaml  README.md  account_utils.py  app.py  pyproject.toml  real_estate_loan.py  test.txt
budget/: account_utils.py  main.py
budget/configs/: directories.py
budget/engines/: budget_class.py  components.py
budget/utils/: colors.py  plotting.py
cashflow/: main.py
cashflow/configs/: directories.py
cashflow/engines/: budget.py  budget_class.py  components.py
cashflow/utils/: colors.py  logging_utils.py  plotting.py
