[tool.poetry]
name = "lifelong-budget"
version = "0.1.0"
description = ""
authors = ["Rune Christiansen <krunechristiansen@gmail.com>"]
readme = "README.md"
packages = [
    { include = "budget" },
]



[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
streamlit = "^1.34.0"
matplotlib = "~3.7.2"
protobuf = "^3.19.0"
colorlog = "^6.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
